# sps_genai_Zixuan-Lin

./: .gitignore  Agentic_workflow.ipynb  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: bigram_model.py  cnn_cifar10.pth  cnn_model.py  main.py  train_cnn.py
checkpoints/: gan_mnist.pt
helper_lib/: data_loader.py  evaluator.py  generator.py  main.py  model.py  trainer.py  utils.py
